objects/Zuora__Subscription__c.object
<CustomObject>
    <description>A subscription is a product or service that has recurring charges, such as a monthly flat fee or charges based on usage. Subscriptions can also include one-time charges, such as activation fees.</description>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <formula>Zuora__Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <description>Changed the API Name on 14 Jun 2017 as per request from Zoura (David) during Cog 1.8 release</description>
        <label>Gift Code Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Gift Code Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceInformation__c</fullName>
        <label>Device Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Trial_End_Date__c</fullName>
        <label>Free Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_End_Date__c</fullName>
        <label>Gift Code End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Remaining_Term__c</fullName>
        <formula>IF(
    TODAY() &lt; Free_Trial_End_Date__c,
    IF(
        AND( ISNULL( Free_Trial_End_Date__c ), ISNULL( Gift_Code_End_Date__c ) ),
        0,
        ( 
         ( YEAR( Gift_Code_End_Date__c ) * 12 + MONTH( Gift_Code_End_Date__c ) ) -
         ( YEAR( Free_Trial_End_Date__c ) * 12 + MONTH( Free_Trial_End_Date__c ) ) -
         IF( ( DAY( Gift_Code_End_Date__c ) - DAY( TODAY() ) ) &lt; 0, 1, 0 )
        )
    ),
    IF(
        OR(
            AND( ISNULL( Gift_Code_End_Date__c ), ISNULL( Zuora__CustomerAccount__r.Zuora__LastInvoiceDate__c )),
            (Gift_Code_End_Date__c &lt; TODAY())
        ),
        0,
        ( 
         ( YEAR( Gift_Code_End_Date__c ) * 12 + MONTH( Gift_Code_End_Date__c ) ) -
         ( YEAR( Zuora__CustomerAccount__r.Zuora__LastInvoiceDate__c ) * 12 + MONTH( Zuora__CustomerAccount__r.Zuora__LastInvoiceDate__c ) ) -
         IF( ( DAY( Gift_Code_End_Date__c) -  DAY(  TODAY() ) ) &lt; 0, 1, 0 )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Code Remaining Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Start_Date__c</fullName>
        <formula>IF( 
ISBLANK(Giftcode__c), 
null, 
NULLVALUE( 
Free_Trial_End_Date__c, 
IF( 
OR( ISNULL ( Campaign_Id__c ), ISBLANK ( Campaign_Id__c ) ), 
null, 
Zuora__SubscriptionStartDate__c 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Code Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Status__c</fullName>
        <formula>IF(
    Gift_Code_Start_Date__c &gt; TODAY(),
    &apos;Applied&apos;,
    IF(
        AND( Gift_Code_Start_Date__c &lt;= TODAY(), Gift_Code_End_Date__c &gt; TODAY() ),
        &apos;In Use&apos;,
        IF(
            Gift_Code_End_Date__c &lt;= TODAY(),
            &apos;Expired&apos;,
            &apos;&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Code Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giftcode__c</fullName>
        <label>Gift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NumFreeTrialPeriods__c</fullName>
        <label>NumFreeTrialPeriods</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumGiftPeriods__c</fullName>
        <label>NumGiftPeriods</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemUserID__c</fullName>
        <label>SourceSystemUserID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>SourceSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionAmount__c</fullName>
        <formula>IF(ISPICKVAL(Zuora__TermSettingType__c , &apos;TERMED&apos;), (Zuora__MRR__c * 12), Zuora__MRR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingID__c</fullName>
        <label>Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAgent__c</fullName>
        <label>UserAgent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoRenew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__CancelledDate__c</fullName>
        <description>The date of the Amendment object that canceled the subscription.</description>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ContractAcceptanceDate__c</fullName>
        <description>This is the date on which the contract was accepted by the customer, and will trigger charges that have their trigger event set to Upon Customer Acceptance.</description>
        <label>Contract Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ContractEffectiveDate__c</fullName>
        <description>This is the date on which the contract becomes effective, and will trigger charges that have their trigger event set to Upon Contract Effective.</description>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__CurrentTermPeriodType__c</fullName>
        <description>The period type for the current subscription term.</description>
        <inlineHelpText>The period type of the current subscription term.</inlineHelpText>
        <label>Current Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__CurrentTerm__c</fullName>
        <label>Current Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerAccount__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__InitialTermPeriodType__c</fullName>
        <description>The period type for the first subscription term.</description>
        <inlineHelpText>The period type for the first subscription term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__InitialTerm__c</fullName>
        <label>Initial Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Owner</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions (Invoice Owner)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__MRR__c</fullName>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__NextChargeDate__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__NextRenewalDate__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__OpportunityCloseDate__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalCreatedDate__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalCreated_Date__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalId__c</fullName>
        <description>The original ID of this subscription.</description>
        <label>Original Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PreviousSubscriptionId__c</fullName>
        <description>The subscription ID immediately prior to the current subscription.</description>
        <label>Previous Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteBusinessType__c</fullName>
        <label>Quote Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteType__c</fullName>
        <label>Quote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RenewalTermPeriodType__c</fullName>
        <description>The period type for the subscription renewal term.</description>
        <inlineHelpText>The period type for the subscription renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__RenewalTerm__c</fullName>
        <label>Renewal Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ServiceActivationDate__c</fullName>
        <description>This is when the service was activated, and will trigger charges that have their trigger event set to Upon Service Activation.</description>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionEndDate__c</fullName>
        <description>This is when the subscription ends. This is always equal to term end date, unless the subscription has been cancelled. If the subscription has been cancelled, this is set to the cancellation date.</description>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionNumber__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionStartDate__c</fullName>
        <description>The date when the subscription term starts. This is equal to the term start date if the subscription is on its initial term. Otherwise, it is the original term start date if the subscription has renewed.</description>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TermEndDate__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TermSettingType__c</fullName>
        <description>Case sensitive. Denotes if a subscription is evergreen (has no end date or term length) or has a term.</description>
        <label>Term Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TERMED</fullName>
                </value>
                <value>
                    <fullName>EVERGREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Id__c</fullName>
        <description>The Zuora Id (external primary key) of this Subscription.</description>
        <inlineHelpText>The Zuora Id (external primary key) of this Subscription.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>